landing page sebelum revisi styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,12 @@ a {
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+}
+
 @layer utilities {
   input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
